--- a/en.html
+++ b/en.html
@@ -186,7 +186,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Why?</h2>
-                <p>In our first visit to the Elementary School of Boa Entrada, we found only empty bookshelves. <b>Textbooks as well as teaching materials were almost inexistent</b>. We took some old textbooks with us that we have gathered with our friend's help and we set up a small printer and an old laptop. However, we felt that the aid provided was still insufficient because:</p>
+                <p>In our first visit to the Elementary School of Boa Entrada, we found only empty bookshelves. <b>Textbooks as well as teaching materials were almost inexistent</b>. We took some old textbooks with us that we have gathered with our friends' help and we set up a small printer and an old laptop. However, we felt that the aid provided was still insufficient because:</p>
             </div>
 
             <div class="col-md-6" data-aos="fade-up">
