--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             </div>
             <div class="col-md-6" data-aos="fade-up">
                 <i class="fa fa-print fa-3x" aria-hidden="true"></i> &nbsp; &nbsp; <i class="fa fa-tint fa-3x" aria-hidden="true"></i>
-                <p>A escola tem dificuldade em repôr os tinteiros por si (são difíceis de arranjar em São Tomé e Príncipe)</p>
+                <p>A escola tem dificuldade em repor os tinteiros por si (são difíceis de arranjar em São Tomé e Príncipe)</p>
             </div>
         </div>
     </section>
