--- a/en.html
+++ b/en.html
@@ -127,7 +127,7 @@
 
             <div class="col-md-4" data-aos="fade-up">
                 <i class="fa fa-laptop fa-3x" aria-hidden="true"></i>
-                <p>15 Raspberry Pi computers</p>
+                <p>15 Raspberry Pi (low-cost computers)</p>
             </div>
             <div class="col-md-4" data-aos="fade-up">
                 <i class="fa fa-keyboard-o fa-3x" aria-hidden="true"></i>
