Link to raspberry pi foundation website

--- a/index.html
+++ b/index.html
@@ -242,7 +242,9 @@
             </div>
 
             <div class="col-md-6">
-                <img class="why-raspberry-img" src="img/raspberry.png">
+                <a target="_blank" href="https://www.raspberrypi.org/about/">
+                    <img class="why-raspberry-img" src="img/raspberry.png">
+                </a>
             </div>
             <div class="col-md-6">
                 <ul class="list-inline banner-social-buttons">
