--- a/en.html
+++ b/en.html
@@ -103,10 +103,10 @@
                         <div class="intro-circle"></div>
                         <div class="intro-circle-text">
                             <h1 class="brand-heading">Mundubila</h1>
-                            <p class="intro-text"> <br>Mundu bila means in forro creole 
-                                <br>"the World revolves around".
-                                <br>Let's take the Elementary School of Boa Entrada
-                                <br>into orbit around knowledge! </p>
+                            <p class="intro-text"> <br>Mundu bila means in forro creole
+                                <br>that the World is changing for the better.
+                                <br>Let's change the world of the Elementary
+                                <br>School of Boa Entrada!</p>
                             <a href="#what" class="btn btn-circle page-scroll">
                                 <i class="fa fa-caret-down animated"></i>
                             </a>
