--- a/index.html
+++ b/index.html
@@ -103,9 +103,10 @@
                         <div class="intro-circle"></div>
                         <div class="intro-circle-text">
                             <h1 class="brand-heading">Mundubila</h1>
-                            <p class="intro-text"> <br>O mundu bila significa em forro "O mundo gira".
-                                <br>Vamos pôr a Escola da Boa Entrada
-                                <br>na órbita do conhecimento!</p>
+                            <p class="intro-text"> <br>O mundu bila significa em forro
+                                <br>que o mundo está a mudar, para melhor.
+                                <br>Vamos mudar o mundo da
+                                <br>Escola da Boa Entrada!</p>
                             <a href="#what" class="btn btn-circle page-scroll">
                                 <i class="fa fa-caret-down animated"></i>
                             </a>
