--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <p class="intro-text"> <br>O mundu bila significa em forro
                                 <br>que o mundo está a mudar, para melhor.
                                 <br>Vamos mudar o mundo da
-                                <br>Escola da Boa Entrada!</p>
+                                <br>Escola Básica da Boa Entrada!</p>
                             <a href="#what" class="btn btn-circle page-scroll">
                                 <i class="fa fa-caret-down animated"></i>
                             </a>
