School info updated

--- a/en.html
+++ b/en.html
@@ -218,7 +218,7 @@
             </div>
             <div class="col-md-6" data-aos="fade-up">
                 <i class="fa fa-group fa-3x" aria-hidden="true"></i>
-                <p>Offer more pedagogical training for teachers (73% of these teachers do not have formal pedagogical training, however 46% are currently in training)</p>
+                <p>Offer more pedagogical training for teachers (only 27% of these teachers have formal pedagogical training, the other 73% are currently in training)</p>
             </div>
             <div class="col-md-6" data-aos="fade-up">
                 <i class="fa fa-tv fa-3x" aria-hidden="true"></i>
