--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             </div>
             <div class="col-md-6" data-aos="fade-up">
                 <i class="fa fa-group fa-3x" aria-hidden="true"></i>
-                <p>Apoiar os professores com mais formação (73% dos professores não tem formação pedagógica, havendo 46% em formação)</p>
+                <p>Apoiar os professores com mais formação (apenas 27% dos professores tem formação pedagógica, havendo 73% em formação)</p>
             </div>
             <div class="col-md-6" data-aos="fade-up">
                 <i class="fa fa-tv fa-3x" aria-hidden="true"></i>
