Crowdfunding campaign info added (PPL)

--- a/en.html
+++ b/en.html
@@ -78,6 +78,9 @@
                         <a class="page-scroll" href="#who">Who?</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#ppl"> <b>DONATE</b> </a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                     <li>
@@ -271,6 +274,26 @@
             </div>
         </section>
     </div>
+
+    <!-- PPL Section -->
+    <section id="ppl" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>How can you help?</h2>
+            </div>
+            <div class="col-lg-8 col-lg-offset-2">
+                <p>We are promoting a crowdfunding campaign where you can support our project. You only have to click on <b>CONTRIBUTE</b> and make your donation. <br> Thank you for all your support!</p>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <iframe width="316" height="435" src="https://ppl.com.pt/en/embed/407376" frameborder="0" scrolling="no"></iframe>
+        </div>
+        <div class="col-md-8">
+            <a href="https://ppl.com.pt/en/node/407376" target="_blank">
+                <img class="ppl-gif" src="img/ppl_en.gif">
+            </a>
+        </div>
+    </section>
 
     <!-- Who Section -->
     <section id="who" class="container content-section text-center">
