--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
                         <a class="page-scroll" href="#who">Quem?</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#ppl"> <b>APOIAR</b> </a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#contact">Contactos</a>
                     </li>
                     <li>
@@ -103,8 +106,8 @@
                         <div class="intro-circle"></div>
                         <div class="intro-circle-text">
                             <h1 class="brand-heading">Mundubila</h1>
-                            <p class="intro-text"> <br>O mundu bila significa em forro
-                                <br>que o mundo está a mudar, para melhor.
+                            <p class="intro-text"> <br>O mundu bila significa em crioulo forro
+                                <br>que o mundo está a mudar para melhor.
                                 <br>Vamos mudar o mundo da
                                 <br>Escola Básica da Boa Entrada!</p>
                             <a href="#what" class="btn btn-circle page-scroll">
@@ -271,6 +274,26 @@
             </div>
         </section>
     </div>
+
+    <!-- PPL Section -->
+    <section id="ppl" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Como apoiar?</h2>
+            </div>
+            <div class="col-lg-8 col-lg-offset-2">
+                <p>Criámos uma campanha de <b>crowdfunding</b> (que está a decorrer na plataforma PPL) para que nos possas ajudar. Para apoiares este projecto basta clicares em <b>APOIAR</b> e fazeres a tua contribuição. <br> Muito obrigado por toda a ajuda!</p>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <iframe width="316" height="435" src="https://ppl.com.pt/embed/407376" frameborder="0" scrolling="no"></iframe>
+        </div>
+        <div class="col-md-8">
+            <a href="https://ppl.com.pt/causas/mundubila" target="_blank">
+                <img class="ppl-gif" src="img/ppl.gif">
+            </a>
+        </div>
+    </section>
 
     <!-- Who Section -->
     <section id="who" class="container content-section text-center">
