Late 2018 is here.

--- a/en.html
+++ b/en.html
@@ -78,7 +78,7 @@
                         <a class="page-scroll" href="#who">Who?</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#ppl"> <b>DONATE</b> </a>
+                        <a class="page-scroll" href="#donate"> <b>DONATE</b> </a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -275,23 +275,33 @@
         </section>
     </div>
 
-    <!-- PPL Section -->
-    <section id="ppl" class="container content-section text-center">
+    <!-- Donate Section -->
+    <section id="donate" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>How can you help?</h2>
             </div>
             <div class="col-lg-8 col-lg-offset-2">
-                <p>We are promoting a crowdfunding campaign where you can support our project. You only have to click on <b>CONTRIBUTE</b> and make your donation. <br> Thank you for all your support!</p>
+                <p>Thanks to you, <a href="https://ppl.com.pt/en/node/407376" target="_blank"> our crowdfunding campaign </a> was successfully funded and Mundubila has achieved more than half of the amount needed to be implemented. You can still donate and help our project through:</p>
+                <p>IBAN: <b>PT50 0033 0000 45527337128 05</b></p>
+                <p>Account name: <b>MUNDUBILA ASSOCIACAO</b></p>
+                <p>BIC/SWIFT: <b>BCOMPTPL</b></p>
+            </div>
+        </div>
+
+        <!-- Achievements -->
+        <div class="col-md-4">
+            <iframe width="100%" height="575" src="https://ppl.com.pt/en/embed/407376" frameborder="0" scrolling="no" style="max-width: 400px;"></iframe>
+        </div>
+        <div class="col-md-4">
+            <div class="achievements">
+                <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmundubila%2Fposts%2F1154892987968830&width=350&show_text=false&appId=349375878807860&height=1774" width="350" height="710" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
             </div>
         </div>
         <div class="col-md-4">
-            <iframe width="316" height="435" src="https://ppl.com.pt/en/embed/407376" frameborder="0" scrolling="no"></iframe>
-        </div>
-        <div class="col-md-8">
-            <a href="https://ppl.com.pt/en/node/407376" target="_blank">
-                <img class="ppl-gif" src="img/ppl_en.gif">
-            </a>
+            <div class="achievements">
+                <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmundubila%2Fposts%2F878129248978540&width=350&show_text=false&appId=349375878807860&height=1000" width="350" height="697" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+            </div>
         </div>
     </section>
 
@@ -341,6 +351,12 @@
                     <li>
                         <a target="_blank" href="https://facebook.com/mundubila" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
                     </li>
+                    <li>
+                        <a target="_blank" href="https://instagram.com/mundubila" class="btn btn-default btn-lg"><i class="fa fa-instagram fa-fw"></i> <span class="network-name">Instagram</span></a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://www.linkedin.com/company/mundubila/" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">LinkedIn</span></a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -353,7 +369,8 @@
     <footer>
         <div class="container text-center">
             <img class="footer-img" src="img/mb.png">
-            <p>Mundubila &copy; 2017</p>
+            <p>Mundubila &copy; 2018</p>
+            <p>MUNDUBILA - ASSOCIACAO</p>
         </div>
     </footer>
 
