--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <a class="page-scroll" href="#who">Quem?</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#ppl"> <b>APOIAR</b> </a>
+                        <a class="page-scroll" href="#donate"> <b>APOIAR</b> </a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contactos</a>
@@ -275,23 +275,33 @@
         </section>
     </div>
 
-    <!-- PPL Section -->
-    <section id="ppl" class="container content-section text-center">
+    <!-- Donate Section -->
+    <section id="donate" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Como apoiar?</h2>
             </div>
             <div class="col-lg-8 col-lg-offset-2">
-                <p>Criámos uma campanha de <b>crowdfunding</b> (que está a decorrer na plataforma PPL) para que nos possas ajudar. Para apoiares este projecto basta clicares em <b>APOIAR</b> e fazeres a tua contribuição. <br> Muito obrigado por toda a ajuda!</p>
+                <p>Graças a vocês conseguimos ultrapassar a meta da <a href="https://ppl.com.pt/causas/mundubila" target="_blank"> campanha de crowdfunding que promovemos</a> e, dessa forma, assegurámos mais de metade do valor necessário para implementar o projecto Mundubila. A tua ajuda continua a ser fundamental e podes fazê-la através:</p>
+                <p>IBAN: <b>PT50 0033 0000 45527337128 05</b></p>
+                <p>Nome da conta: <b>MUNDUBILA ASSOCIACAO</b></p>
+                <p>BIC/SWIFT: <b>BCOMPTPL</b></p>
+            </div>
+        </div>
+
+        <!-- Achievements -->
+        <div class="col-md-4">
+            <iframe width="100%" height="575" src="https://ppl.com.pt/embed/407376" frameborder="0" scrolling="no" style="max-width: 400px;"></iframe>
+        </div>
+        <div class="col-md-4">
+            <div class="achievements">
+                <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmundubila%2Fposts%2F1154892987968830&width=350&show_text=false&appId=349375878807860&height=1774" width="350" height="710" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
             </div>
         </div>
         <div class="col-md-4">
-            <iframe width="316" height="435" src="https://ppl.com.pt/embed/407376" frameborder="0" scrolling="no"></iframe>
-        </div>
-        <div class="col-md-8">
-            <a href="https://ppl.com.pt/causas/mundubila" target="_blank">
-                <img class="ppl-gif" src="img/ppl.gif">
-            </a>
+            <div class="achievements">
+                <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmundubila%2Fposts%2F878129248978540&width=350&show_text=false&appId=349375878807860&height=1000" width="350" height="697" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+            </div>
         </div>
     </section>
 
@@ -341,6 +351,12 @@
                     <li>
                         <a target="_blank" href="https://facebook.com/mundubila" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
                     </li>
+                    <li>
+                        <a target="_blank" href="https://instagram.com/mundubila" class="btn btn-default btn-lg"><i class="fa fa-instagram fa-fw"></i> <span class="network-name">Instagram</span></a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://www.linkedin.com/company/mundubila/" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">LinkedIn</span></a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -353,7 +369,8 @@
     <footer>
         <div class="container text-center">
             <img class="footer-img" src="img/mb.png">
-            <p>Mundubila &copy; 2017</p>
+            <p>Mundubila &copy; 2018</p>
+            <p>MUNDUBILA - ASSOCIACAO</p>
         </div>
     </footer>
 
