Moodle added. 2019 here we go.

--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
                     <li>
                         <a class="page-scroll" href="en.html">EN</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" target="_blank" href="https://mundubila.moodlecloud.com">
+                        <i class="glyphicon glyphicon-cloud"></i>  Moodle
+                        </a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -369,7 +374,7 @@
     <footer>
         <div class="container text-center">
             <img class="footer-img" src="img/mb.png">
-            <p>Mundubila &copy; 2018</p>
+            <p>Mundubila &copy; 2019</p>
             <p>MUNDUBILA - ASSOCIACAO</p>
         </div>
     </footer>
