Detailed pdf presentation added. Linkedin profiles links in Who section.

--- a/en.html
+++ b/en.html
@@ -319,11 +319,15 @@
         </div>
 
         <div class="col-md-2">
-            <img class="team-img" src="img/team-p.jpg">
+            <a target="_blank" href="https://www.linkedin.com/in/patricialongo/">
+                <img class="team-img" src="img/team-p.jpg">
+            </a>
             <p>Patrícia Longo</p>
         </div>
         <div class="col-md-2">
-            <img class="team-img" src="img/team-c.jpg">
+            <a target="_blank" href="https://www.linkedin.com/in/carla-azevedo-b5948043/">
+                <img class="team-img" src="img/team-c.jpg">
+            </a>
             <p>Carla Azevedo</p>
         </div>
         <div class="col-md-2">
@@ -331,7 +335,9 @@
             <p>Gilson Ramos</p>
         </div>
         <div class="col-md-2">
-            <img class="team-img" src="img/team-h.jpg">
+            <a target="_blank" href="https://www.linkedin.com/in/hugomalopes/">
+                <img class="team-img" src="img/team-h.jpg">
+            </a>
             <p>Hugo Lopes</p>
         </div>
         <div class="col-md-2">
@@ -339,8 +345,18 @@
             <p>Margarida Azevedo</p>
         </div>
         <div class="col-md-2">
-            <img class="team-img" src="img/team-s.jpg">
+            <a target="_blank" href="https://www.linkedin.com/in/sofia-tonim-01727823/">
+                <img class="team-img" src="img/team-s.jpg">
+            </a>
             <p>Sofia Tonim</p>
+        </div>
+
+        <div class="col-lg-8 col-lg-offset-2">
+            <ul class="list-inline banner-social-buttons">
+                <li>
+                    <a target="_blank" href="res/mb-description_EN.pdf" class="btn btn-default btn-lg"><i class="fa fa-file-pdf-o fa-fw"></i> <span class="network-name">Detailed presentation - 2019</span></a>
+                </li>
+            </ul>
         </div>
     </section>
 
