Documents section added.

--- a/en.html
+++ b/en.html
@@ -81,6 +81,9 @@
                         <a class="page-scroll" href="#donate"> <b>DONATE</b> </a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#docs">Docs</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                     <li>
@@ -350,13 +353,33 @@
             </a>
             <p>Sofia Tonim</p>
         </div>
+    </section>
 
-        <div class="col-lg-8 col-lg-offset-2">
-            <ul class="list-inline banner-social-buttons">
-                <li>
-                    <a target="_blank" href="res/mb-description_EN.pdf" class="btn btn-default btn-lg"><i class="fa fa-file-pdf-o fa-fw"></i> <span class="network-name">Detailed presentation - 2019</span></a>
-                </li>
-            </ul>
+    <!-- Documents Section -->
+    <section id="docs" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Documents</h2>
+                <ul class="list-inline banner-social-buttons">
+                    <li>
+                        <a target="_blank" href="res/faturas.pdf" class="btn btn-default btn-lg"><i class="fa fa-file-pdf-o fa-fw"></i> <span class="network-name">Invoices</span></a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="res/saldo-visao-global-20201118.pdf" class="btn btn-default btn-lg"><i class="fa fa-file-pdf-o fa-fw"></i> <span class="network-name">Balance - 2020</span></a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="res/rc-2019.pdf" class="btn btn-default btn-lg"><i class="fa fa-file-pdf-o fa-fw"></i> <span class="network-name">Accounting Report - 2019</span></a>
+                    </li>
+                </ul>
+                <ul class="list-inline banner-social-buttons">
+                    <li>
+                        <a target="_blank" href="res/rc-2018.pdf" class="btn btn-default btn-lg"><i class="fa fa-file-pdf-o fa-fw"></i> <span class="network-name">Accounting Report - 2018</span></a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="res/mb-description.pdf" class="btn btn-default btn-lg"><i class="fa fa-file-pdf-o fa-fw"></i> <span class="network-name">Detailed presentation - 2019</span></a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </section>
 
@@ -390,7 +413,7 @@
     <footer>
         <div class="container text-center">
             <img class="footer-img" src="img/mb.png">
-            <p>Mundubila &copy; 2019</p>
+            <p>Mundubila &copy; 2020</p>
             <p>MUNDUBILA - ASSOCIACAO</p>
         </div>
     </footer>
