--- a/index.html
+++ b/index.html
@@ -89,11 +89,6 @@
                     <li>
                         <a class="page-scroll" href="en.html">EN</a>
                     </li>
-                    <li>
-                        <a class="page-scroll" target="_blank" href="https://mundubila.moodlecloud.com">
-                        <i class="glyphicon glyphicon-cloud"></i>  Moodle
-                        </a>
-                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -365,7 +360,10 @@
                         <a target="_blank" href="res/faturas.pdf" class="btn btn-default btn-lg"><i class="fa fa-file-pdf-o fa-fw"></i> <span class="network-name">Faturas</span></a>
                     </li>
                     <li>
-                        <a target="_blank" href="res/saldo-visao-global-20201118.pdf" class="btn btn-default btn-lg"><i class="fa fa-file-pdf-o fa-fw"></i> <span class="network-name">Extracto - 2020</span></a>
+                        <a target="_blank" href="res/rc-2021.pdf" class="btn btn-default btn-lg"><i class="fa fa-file-pdf-o fa-fw"></i> <span class="network-name">Relatório de contas - 2021</span></a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="res/rc-2020.pdf" class="btn btn-default btn-lg"><i class="fa fa-file-pdf-o fa-fw"></i> <span class="network-name">Relatório de contas - 2020</span></a>
                     </li>
                     <li>
                         <a target="_blank" href="res/rc-2019.pdf" class="btn btn-default btn-lg"><i class="fa fa-file-pdf-o fa-fw"></i> <span class="network-name">Relatório de contas - 2019</span></a>
@@ -413,7 +411,7 @@
     <footer>
         <div class="container text-center">
             <img class="footer-img" src="img/mb.png">
-            <p>Mundubila &copy; 2021</p>
+            <p>Mundubila &copy; 2022</p>
             <p>MUNDUBILA - ASSOCIACAO</p>
         </div>
     </footer>
