Minor fixes and lang flags added.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
+    <!-- flag-icons - https://github.com/lipis/flag-icons -->
+    <!-- https://cdnjs.com/libraries/flag-icon-css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/6.2.0/css/flag-icons.min.css" integrity="sha512-uvXdJud8WaOlQFjlz9B15Yy2Au/bMAvz79F7Xa6OakCl2jvQPdHD0hb3dEqZRdSwG4/sknePXlE7GiarwA/9Wg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- Animate On Scroll Library -->
     <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
 
@@ -87,7 +91,7 @@
                         <a class="page-scroll" href="#contact">Contactos</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="en.html">EN</a>
+                        <a class="page-scroll" href="en.html"><span class="fi fi-gb"></span></a>
                     </li>
                 </ul>
             </div>
@@ -362,6 +366,8 @@
                     <li>
                         <a target="_blank" href="res/rc-2021.pdf" class="btn btn-default btn-lg"><i class="fa fa-file-pdf-o fa-fw"></i> <span class="network-name">Relatório de contas - 2021</span></a>
                     </li>
+                </ul>
+                <ul class="list-inline banner-social-buttons">
                     <li>
                         <a target="_blank" href="res/rc-2020.pdf" class="btn btn-default btn-lg"><i class="fa fa-file-pdf-o fa-fw"></i> <span class="network-name">Relatório de contas - 2020</span></a>
                     </li>
